--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   <title>MindfulPlay</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <link href='https://fonts.googleapis.com/css?family=Cambo|Poppins:400,600' rel='stylesheet' type='text/css'>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
   <link href="assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
+  <link href="assets/css/bootstrap.css" rel="stylesheet" />
 
   <!--  script for google maps   -->
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
